# api/resources/v1/resources_service_grpc.pb.go
@@ -1,197 +1,0 @@
-// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
-// versions:
-// - protoc-gen-go-grpc v1.5.1
-// - protoc             (unknown)
-// source: relationships/v1/resources_service.proto
-
-package relationships
-
-import (
-	context "context"
-	grpc "google.golang.org/grpc"
-	codes "google.golang.org/grpc/codes"
-	status "google.golang.org/grpc/status"
-)
-
-// This is a compile-time assertion to ensure that this generated file
-// is compatible with the grpc package it is being compiled against.
-// Requires gRPC-Go v1.64.0 or later.
-const _ = grpc.SupportPackageIsVersion9
-
-const (
-	KesselResourceService_CreateResource_FullMethodName = "/relationships.v1.KesselResourceService/CreateResource"
-	KesselResourceService_UpdateResource_FullMethodName = "/relationships.v1.KesselResourceService/UpdateResource"
-	KesselResourceService_DeleteResource_FullMethodName = "/relationships.v1.KesselResourceService/DeleteResource"
-)
-
-// KesselResourceServiceClient is the client API for KesselResourceService service.
-//
-// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
-type KesselResourceServiceClient interface {
-	CreateResource(ctx context.Context, in *CreateResourceRequest, opts ...grpc.CallOption) (*CreateResourceResponse, error)
-	UpdateResource(ctx context.Context, in *UpdateResourceRequest, opts ...grpc.CallOption) (*UpdateResourceResponse, error)
-	DeleteResource(ctx context.Context, in *DeleteResourceRequest, opts ...grpc.CallOption) (*DeleteResourceResponse, error)
-}
-
-type kesselResourceServiceClient struct {
-	cc grpc.ClientConnInterface
-}
-
-func NewKesselResourceServiceClient(cc grpc.ClientConnInterface) KesselResourceServiceClient {
-	return &kesselResourceServiceClient{cc}
-}
-
-func (c *kesselResourceServiceClient) CreateResource(ctx context.Context, in *CreateResourceRequest, opts ...grpc.CallOption) (*CreateResourceResponse, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
-	out := new(CreateResourceResponse)
-	err := c.cc.Invoke(ctx, KesselResourceService_CreateResource_FullMethodName, in, out, cOpts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *kesselResourceServiceClient) UpdateResource(ctx context.Context, in *UpdateResourceRequest, opts ...grpc.CallOption) (*UpdateResourceResponse, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
-	out := new(UpdateResourceResponse)
-	err := c.cc.Invoke(ctx, KesselResourceService_UpdateResource_FullMethodName, in, out, cOpts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *kesselResourceServiceClient) DeleteResource(ctx context.Context, in *DeleteResourceRequest, opts ...grpc.CallOption) (*DeleteResourceResponse, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
-	out := new(DeleteResourceResponse)
-	err := c.cc.Invoke(ctx, KesselResourceService_DeleteResource_FullMethodName, in, out, cOpts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-// KesselResourceServiceServer is the server API for KesselResourceService service.
-// All implementations must embed UnimplementedKesselResourceServiceServer
-// for forward compatibility.
-type KesselResourceServiceServer interface {
-	CreateResource(context.Context, *CreateResourceRequest) (*CreateResourceResponse, error)
-	UpdateResource(context.Context, *UpdateResourceRequest) (*UpdateResourceResponse, error)
-	DeleteResource(context.Context, *DeleteResourceRequest) (*DeleteResourceResponse, error)
-	mustEmbedUnimplementedKesselResourceServiceServer()
-}
-
-// UnimplementedKesselResourceServiceServer must be embedded to have
-// forward compatible implementations.
-//
-// NOTE: this should be embedded by value instead of pointer to avoid a nil
-// pointer dereference when methods are called.
-type UnimplementedKesselResourceServiceServer struct{}
-
-func (UnimplementedKesselResourceServiceServer) CreateResource(context.Context, *CreateResourceRequest) (*CreateResourceResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method CreateResource not implemented")
-}
-func (UnimplementedKesselResourceServiceServer) UpdateResource(context.Context, *UpdateResourceRequest) (*UpdateResourceResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method UpdateResource not implemented")
-}
-func (UnimplementedKesselResourceServiceServer) DeleteResource(context.Context, *DeleteResourceRequest) (*DeleteResourceResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method DeleteResource not implemented")
-}
-func (UnimplementedKesselResourceServiceServer) mustEmbedUnimplementedKesselResourceServiceServer() {}
-func (UnimplementedKesselResourceServiceServer) testEmbeddedByValue()                               {}
-
-// UnsafeKesselResourceServiceServer may be embedded to opt out of forward compatibility for this service.
-// Use of this interface is not recommended, as added methods to KesselResourceServiceServer will
-// result in compilation errors.
-type UnsafeKesselResourceServiceServer interface {
-	mustEmbedUnimplementedKesselResourceServiceServer()
-}
-
-func RegisterKesselResourceServiceServer(s grpc.ServiceRegistrar, srv KesselResourceServiceServer) {
-	// If the following call pancis, it indicates UnimplementedKesselResourceServiceServer was
-	// embedded by pointer and is nil.  This will cause panics if an
-	// unimplemented method is ever invoked, so we test this at initialization
-	// time to prevent it from happening at runtime later due to I/O.
-	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
-		t.testEmbeddedByValue()
-	}
-	s.RegisterService(&KesselResourceService_ServiceDesc, srv)
-}
-
-func _KesselResourceService_CreateResource_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(CreateResourceRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(KesselResourceServiceServer).CreateResource(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: KesselResourceService_CreateResource_FullMethodName,
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(KesselResourceServiceServer).CreateResource(ctx, req.(*CreateResourceRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _KesselResourceService_UpdateResource_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(UpdateResourceRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(KesselResourceServiceServer).UpdateResource(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: KesselResourceService_UpdateResource_FullMethodName,
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(KesselResourceServiceServer).UpdateResource(ctx, req.(*UpdateResourceRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _KesselResourceService_DeleteResource_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(DeleteResourceRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(KesselResourceServiceServer).DeleteResource(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: KesselResourceService_DeleteResource_FullMethodName,
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(KesselResourceServiceServer).DeleteResource(ctx, req.(*DeleteResourceRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-// KesselResourceService_ServiceDesc is the grpc.ServiceDesc for KesselResourceService service.
-// It's only intended for direct use with grpc.RegisterService,
-// and not to be introspected or modified (even as a copy)
-var KesselResourceService_ServiceDesc = grpc.ServiceDesc{
-	ServiceName: "relationships.v1.KesselResourceService",
-	HandlerType: (*KesselResourceServiceServer)(nil),
-	Methods: []grpc.MethodDesc{
-		{
-			MethodName: "CreateResource",
-			Handler:    _KesselResourceService_CreateResource_Handler,
-		},
-		{
-			MethodName: "UpdateResource",
-			Handler:    _KesselResourceService_UpdateResource_Handler,
-		},
-		{
-			MethodName: "DeleteResource",
-			Handler:    _KesselResourceService_DeleteResource_Handler,
-		},
-	},
-	Streams:  []grpc.StreamDesc{},
-	Metadata: "relationships/v1/resources_service.proto",
-}
